# webapp-clean-archi

./: .env.example  .env.test  .gitignore  .pre-commit-config.yaml  .sourcery.yaml  Dockerfile  Justfile  Makefile  README.md  alembic.ini  compose-dev.yaml  compose.yaml  coucou.py  justfile  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  lint.yml  release.yml  tests.yml
app/alembic/: env.py
app/alembic/versions/: 2025_06_21_1540-2771b4a56d12_initialize_models.py
app/api/: app.py  dependencies.py  exceptions.py  handlers.py  lifespan.py  logger.py  middlewares.py  security.py  utils.py
app/api/auth/: router.py
app/api/dev/: router.py
app/api/dtos/: pagination.py  post.py  user.py
app/api/dummies/: dtos.py  router.py
app/api/items/: router.py
app/api/posts/: dtos.py  router.py
app/api/routers/: posts.py  users.py
app/api/routes/: posts.py  users.py
app/api/users/: dtos.py  router.py
app/cli/: app.py  main.py  posts.py  users.py  utils.py
app/core/: app.py  config.py  context.py  core.py  dependencies.py  domain.py  event_handler.py  logger.py  security.py  uow.py  uows.py  worker.py
app/core/context/: __init__.py  context.py  mongo.py  sql.py  utils.py
app/core/domain/: asynchronous.py  synchronous.py
app/core/logging/: config-dev.json  config.json  formatter.py
app/dependencies/: settings.py
app/dependencies/fastapi/: dependencies.py  mongo.py  sql.py
app/dependencies/faststream/: dependencies.py  mongo.py  sql.py
app/domain/: caching.py  context.py  domain.py  entities.py  exceptions.py  filters.py  logger.py
app/domain/dev/: commands.py
app/domain/dummies/: commands.py  entities.py  repository.py
app/domain/generics/: entities.py  repository.py
app/domain/interfaces/: cache_manager.py  event_publisher.py  repository.py  task_queue.py
app/domain/items/: commands.py  entities.py  repository.py  use_cases.py
app/domain/post/: commands.py  repository.py
app/domain/posts/: commands.py  entities.py  repository.py  use_cases.py
app/domain/user/: commands.py  entities.py  repository.py
app/domain/users/: commands.py  entities.py  repository.py  use_cases.py
app/event_handler/: app.py  dependencies.py  router.py
app/infrastructure/: sqlalchemy_uow.py
app/infrastructure/cache_manager/: inmemory_cache_manager.py  logger.py  provider.py  (+1 more)
app/utils/: sqlalchemy_instrument.py
factories/: base.py  factories.py  mongo.py  posts.py  sql.py  users.py
factories/posts/: base.py  mongo.py  sql.py
factories/users/: base.py  mongo.py  sql.py
scripts/: container.just  init_db.py
tests/: .env.test  conftest.py  context.py  init.py
tests/api/: test_async.py  test_pagination.py  test_posts.py  test_search.py  test_users.py  test_utils.py
tests/cli/: test_cli.py
tests/core/: test_dependencies.py
tests/dependencies/: dependencies.py  fastapi.py  faststream.py
tests/domain/: test_caching.py
tests/factories/: base.py  dummies.py  faker.py  items.py  posts.py  users.py
tests/fixtures/: database.py  factories.py  mongo.py  repositories.py  sql.py
tests/plugins/: database.py  factories.py  http.py  repositories.py  settings.py
tests/utils/: test_queries.py  test_sqlalchemy_instrument.py
(+72 files in other folders)
