[project]
name = "webapp-clean-archi"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "cleanstack[sql]",
    "fastapi[standard]==0.139.0",
]

[dependency-groups]
dev = [
    "httpx2==2.5.0",
    "mypy==2.2.0",
    "pytest==9.1.1",
    "ruff==0.15.21",
    "ty==0.0.58",
]

[tool.uv.sources]
cleanstack = { git = "https://github.com/julienpillaud/cleanstack", tag = "0.27.1" }

[tool.ruff]
output-format = "concise"

[tool.ruff.lint]
select = [
    "E", "W", # pycodestyle
    "F", # Pyflakes
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "I", # isort
    "PL", # Pylint
    "RUF",
    "ANN", # flake8-annotations
]
ignore = []

[tool.ty.terminal]
output-format = "concise"

[tool.mypy]
strict = true
disable_error_code = [
    "prop-decorator",
]
plugins = ['pydantic.mypy']

[tool.logfire]
ignore_no_config = true

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli = true
log_cli_level = "info"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)30s - %(message)s"
